    * sap.dialog: Monitors SAP dialog statistics like the response time
    * sap.value: Simply processes information provided by SAP to Nagios
    * openvpn_clients: new check for OpenVPN connections
    * if64_tplink: special new check for TP Link switches with broken SNMP output
    * job: Monitoring states and performance indicators of any jobs on linux systems
    * cisco_qos: adhere qos-bandwidth policies
    * check_disk_smb: WATO formalization for active check check_disk_smb
    * if.include: new configurable parameters for assumed input and output speed
    * cisco_qos: new param unit:    switches between bit/byte display
                 new param average: average the values over the given minute
                 new params post/drop can be configured via int and float
                 fixed incorrect worst state if different parameters exceed limit
    * logwatch.ec: Added optional spooling to the check to prevent dataloss
      when processing of current lines needs more time than max execution time
    * mounts: ignore multiple occurrances of the same device
    * Linux agent: allow cached local/plugins checks (see docu)
    * mem.include: Linux memory check now includes size of page tables. This
      can be important e.g. on ORACLE systems with a lot of memory
    * windows_agent: Now buffers output before writing it to the socket
                     Results in less tcp packages per call
    * smart.stats: rewrote check. Please reinventorize. Error counters are now
      snapshotted during inventory.
    * smart.temp: add WATO configuration
    * windows_agent: check_mk.ini: new option "port" - specifies agent port
    * winperf_processor: introduce averaging, support predictive levels
    * cpu_util.include: fixed bug when params are set to None
    * predictive levels: fixed bug when existing predictive levels get new options
    * windows_plugin mssql.vbs: No longer queries stopped mssql instances